<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F242F"
    android:baselineAligned="false"
    android:id="@+id/main_frame">

    <!--Old View for Starting Old Recog-->
    <!--<RelativeLayout-->
        <!--android:id="@+id/start_game"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:background="#89c33f"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:layout_marginLeft="@dimen/game_horizontal_margin"-->
        <!--android:layout_marginRight="@dimen/game_horizontal_margin"-->
        <!--android:paddingBottom="@dimen/game_padding"-->
        <!--android:paddingLeft="@dimen/game_padding"-->
        <!--android:paddingRight="@dimen/game_padding"-->
        <!--android:paddingTop="@dimen/game_padding"-->
        <!-->-->

        <!--<ImageView-->
            <!--android:id="@+id/img_represent"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="220dp"-->
            <!--android:maxHeight="250dp"-->
            <!--android:contentDescription="@string/theme_display_image"-->
            <!--android:padding="0dp"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@drawable/mustaches_represent"-->
            <!--android:layout_centerHorizontal="true"/>-->

        <!--<ImageView-->
            <!--android:id="@+id/play_game"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="250dp"-->
            <!--android:layout_alignBottom="@+id/img_represent"-->
            <!--android:layout_alignRight="@+id/img_represent"-->
            <!--android:layout_alignEnd="@+id/img_represent"-->
            <!--android:contentDescription="@string/desc" />-->

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="220dp"-->
            <!--android:maxHeight="260dp"-->
            <!--android:paddingBottom="0dp"-->
            <!--android:background="@drawable/recognize_2015_start"-->
            <!--android:contentDescription="@string/theme_display_image"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignTop="@+id/img_represent"-->
            <!--android:id="@+id/play_game"/>-->

        <!--<TextView-->
            <!--android:id="@+id/album_title"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:contentDescription="@string/theme_display_image"-->
            <!--android:padding="5dp"-->
            <!--android:text="@string/Test"-->
            <!--android:textSize="20sp"-->
            <!--android:textStyle="bold"-->
            <!--android:background="#89c33f"-->
            <!--android:layout_below="@+id/play_game"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"/>-->
    <!--</RelativeLayout>-->

    <!--<HorizontalScrollView-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_marginTop="3dp"-->
         <!-->-->
        <!--<LinearLayout-->
            <!--android:id="@+id/trends_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal" >-->
        <!--</LinearLayout>-->
    <!--</HorizontalScrollView>-->

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/game_vertical_margin"
        android:layout_marginBottom="@dimen/game_vertical_margin"
        android:text="Recognize"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <RelativeLayout
        android:id="@+id/start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/game_vertical_margin"
        android:layout_marginLeft="@dimen/game_horizontal_margin"
        android:layout_marginRight="@dimen/game_horizontal_margin"
        android:paddingBottom="@dimen/game_padding"
        android:paddingLeft="@dimen/game_padding"
        android:paddingRight="@dimen/game_padding"
        android:paddingTop="@dimen/game_padding"
        >

        <Button
            android:id="@+id/match"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button_main"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:text="@string/play"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/game_horizontal_margin"
        android:layout_marginRight="@dimen/game_horizontal_margin"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/albums_view"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:layout_marginTop="@dimen/game_padding"
            android:layout_marginRight="@dimen/game_horizontal_margin"
            android:src="@drawable/ic_collections_white_48dp"
            android:background="@drawable/album_icon_bg"
            android:contentDescription="@string/theme_albums"
            android:scaleType="centerCrop"
            app:riv_corner_radius="3dp"
            app:riv_border_width="2dp"
            app:riv_border_color="#ffffff"
            app:riv_oval="false"
            />

        <ImageView
            android:id="@+id/settings_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/game_padding"
            android:layout_toRightOf="@+id/albums_view"
            android:layout_marginLeft="20dp"
            android:background="@drawable/recognize_settings"
            android:contentDescription="@string/theme_options" />
    </RelativeLayout>

</RelativeLayout>